# student-os-rag

./: .env.example  IMPLEMENTATION_SUMMARY.md  README.md  add-env-vars.sh  auth.py  chunker.py  config.py  embedder.py  html_converter.py  main.py  models.py  pdf_converter.py  pyproject.toml  requirements.txt  test_chunker.py
api/: index.py
